# react-fastapi

./: README.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py  user_api.py
backend/app/core/: config.py  exception.py  security.py
backend/app/crud/: base_crud.py  user_crud.py
backend/app/db/: base_model.py  session.py
backend/app/models/: user_model.py
backend/app/schemas/: custom_response.py  user_schema.py
backend/migrations/: env.py
backend/migrations/versions/: 2022_07_13_1248-a91259e88e9d_create_user_table.py
